# devenv-server

./: .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.md  dependencies.txt  docker-compose.yml  main.sh  package.json  pyproject.toml  requirements.txt  test-all.sh
.github/workflows/: ci.yml
ansible/: customized.yml  guest.yml  host.yml
ansible/roles/eclipse-java/tasks/: main.yaml
ansible/roles/ghex/tasks/: main.yml
ansible/roles/git-flow/tasks/: main.yml
ansible/roles/gitk/tasks/: main.yml
ansible/roles/gnome-terminal/tasks/: main.yml
ansible/roles/i3/files/: config  i3status.conf
ansible/roles/i3/tasks/: main.yml
ansible/roles/samba/tasks/: main.yml
ansible/roles/samba/vars/: main.yml
ansible/roles/thunar/tasks/: main.yml
ansible/roles/vscode/tasks/: main.yml
ansible/roles/vscode/vars/: main.yml
dockerfiles/node/: Dockerfile
dockerfiles/python/: Dockerfile
km45-ansible/: host.yml
km45-ansible/roles/ghex/tasks/: main.yml
km45-playbooks/: site.yml  test.json
km45-playbooks/host/: site.yml
misc/: run-molecule
playbooks/: site.yml  ubuntu-bionic.yml  ubuntu-xenial.yml
src/multipass/: cloud-init.yml
src/playbooks/: multipass.yml  requirements.yml  site.yml  ubuntu-bionic.yml  ubuntu-trusty.yml  ubuntu-xenial.yml  well_tested.yml
src/vagrantfiles/archlinux/: Vagrantfile
src/vagrantfiles/opensuse-leap-15-2/: Vagrantfile
src/vagrantfiles/ubuntu-bionic/: Vagrantfile
src/vagrantfiles/ubuntu-focal/: Vagrantfile
src/vagrantfiles/ubuntu-jammy/: Vagrantfile
src/vagrantfiles/ubuntu-xenial/: Vagrantfile
(+341 files in other folders)
