[tool.poetry]
name = "test-linux-devenv"
version = "0.1.0"
description = ""
authors = ["Kamei Shogo <km45@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible-lint = "^4.2.0"
molecule = {extras = ["docker", "lint"], version = "^3.1.5"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
