[tool.poetry]
name = "test-linux-devenv"
version = "0.1.0"
description = ""
authors = ["Kamei Shogo <km45@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
molecule = {extras = ["docker", "lint"], version = "^3.2.3"}
molecule-vagrant = "^0.6.1"
python-vagrant = "^0.5.15"
ansible-lint = "4.x"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
