[tool.poetry]
name = "test-linux-devenv"
version = "0.1.0"
description = ""
authors = ["Kamei Shogo <km45@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
molecule = {extras = ["ansible", "docker"], version = "^3.3.2"}
ansible-lint = "^5.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
